--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -1,54 +1,55 @@
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
+*, *:before, *:after {
+    box-sizing: border-box;
 }
 
-html,
-body {
-  height: 100%;
+html, body {
+    height: 100%;
 }
 
 body {
-  align-items: center;
-  background: #fafafa;
-  color: #333;
-  display: flex;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  justify-content: center;
+    background: #4898dc;
+    color: #333;
+    display: flex;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
 }
 
-.browsehappy {
-  background: #ccc;
-  color: #000;
-  margin: 0.2em 0;
-  padding: 0.2em 0;
+.hook {
+    flex: 1;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: space-around;
+    display: flex;
+    flex-direction: column;
 }
 
-.welcome {
-  background: #eee;
-  padding: 40px 60px;
-  text-align: center;
+.modes {
+    width: 100%;
+    display: flex;
+    margin-bottom: 20px;
+    flex: 1;
+    .half {
+        flex: 1;
+        margin: 0;
+        padding: 0;
+        &.isActive {
+            background-color: lighten(#4898dc, 20%);
+        }
+    }
 }
 
-.diamond-container {
-  margin: 40px 0;
+.inps {
+    flex: 2;
+    label {
+        display: block;
+        max-width: 180px;
+        /*temporary*/
+    }
 }
 
-.diamond {
-  fill: #333333;
-  margin: 100px 0;
-}
-
-.credit {
-  font-size: 14px;
-  font-family: serif;
-  letter-spacing: 2px;
-  font-style: italic;
-}
-
-.credit {
-  span {
-    display: block;
-  }
+.response {
+    flex: 3;
 }
