--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -48,6 +48,33 @@ body {
     color: #EEE;
 }
 
+button {
+    display: inline-block;
+    margin: 0 10px 0 0;
+    padding: 5px 10px;
+    font-size: 18px;
+    font-family: "Bitter", serif;
+    line-height: 1.8;
+    appearance: none;
+    box-shadow: none;
+    border-radius: 0;
+    color: darken($bg, 10%);
+    font-weight: bold;
+    background-color: #eee;
+    border: 1px solid $bg;
+    &:focus {
+        outline: none
+    }
+    &:hover {
+        background-color: lighten($bg, 30%) !important;
+    }
+    &:active, &.isSet {
+        background-color: $bg;
+        color: #eee;
+        border: 1px solid #eee
+    }
+}
+
 .inps {
     flex: 2;
     display: flex;
