--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -44,7 +44,6 @@ body {
     .half {
         flex: 1;
         margin: 0;
-        padding: 10px 0;
         cursor: pointer;
         h3 {
             text-align: center;
@@ -57,6 +56,7 @@ body {
         }
         p {
             text-align: center;
+            padding: 1em;
         }
     }
 }
